# vame-app

./: .clinerules  .eslintrc.cjs  .gitignore  .impeccable.md  MIGRATION.md  README-DEV.md  README.md  electron-builder.yml  electron.vite.config.ts  environment-linux.yml  environment-mac-arm.yml  environment-mac-x86.yml  environment-win.yml  main.spec  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vite.config.ts
.github/workflows/: build-and-release-linux.yml  build-and-release-mac-arm.yml  build-and-release-mac-x86.yml  build-and-release-win.yml  build.yml  build_and_publish.yml  test-build-linux.yml  test-build-mac-arm.yml  test-build-mac-x86.yml  test-build-win.yml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
resources/python/hooks/: hook-hdmf.py  hook-ndx_pose.py  hook-numpy.py  hook-pynwb.py  hook-xarray.py
src/main/: index.ts
src/main/process/: runChildProcess.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  env.d.ts  main.tsx
src/renderer/src/@types/: index.d.ts
src/renderer/src/assets/: main.css
src/renderer/src/components/Button/: index.tsx  styles.ts
src/renderer/src/components/DynamicForm/: DynamicInput.tsx  FileSelector.tsx  index.tsx  styles.ts
src/renderer/src/components/Header/: styles.ts
src/renderer/src/components/Navbar/: index.tsx  (+1 more)
src/renderer/src/utils/: date.ts  requests.ts  vame.ts
src/schema/: community-images-get.schema.json  community-videos-generate.schema.json  community-videos-get.schema.json  community.schema.json  config.schema.json  create-trainset.schema.json  create.schema.json  evaluate-model.schema.json  load-project.schema.json  motif-videos-generate.schema.json  motif-videos-get.schema.json  pose-segmentation.schema.json  preprocessing.schema.json  report-get-images.schema.json  train-model.schema.json  umap-get-images.schema.json
src/services/vameApi/: main.py
src/services/vameApi/app/: __init__.py  config.py
src/services/vameApi/vame_app/: __init__.py  cli.py  config.py
src/services/vameApi/vame_desktop/: __init__.py  cli.py  config.py
(+112 files in other folders)
