[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vame-app"
version = "0.4.1"
description = "An open-source machine learning tool for behavioral segmentation and analyses."
readme = "README.md"
license = { text = "GPL-3.0-only" }
requires-python = ">=3.12"
authors = [
    { name = "Luiz Tauffer", email = "luiz.tauffer@catalystneuro.com" },
]
dependencies = [
    "Flask==3.0.3",
    "Flask-Cors==4.0.1",
    "flask-restx==1.3.0",
    "portalocker==3.1.1",
    "waitress==3.0.0",
    "vame-py>=0.14.2",
]

[project.urls]
Homepage = "https://github.com/EthoML/vame-app"

[project.scripts]
vame-app = "vame_app.cli:main"

[tool.setuptools]
package-dir = { "" = "src/services/vameApi" }

[tool.setuptools.packages.find]
where = ["src/services/vameApi"]

# Ship the built React frontend (produced by `npm run build` into
# vame_app/web) inside the wheel so `vame-app` can serve it.
[tool.setuptools.package-data]
vame_app = ["web/**/*"]
